<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.maqiangcgq</groupId>
	<artifactId>sdk</artifactId>
	<version>1.1.2</version>
	<packaging>pom</packaging>
	<name>Wrapper</name>
	<url>https://github.com/mq7253180/sdk</url>
	<description>Common utils included</description>
	<properties>
		<argLine>-Dfile.encoding=UTF-8</argLine>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<distributionManagement>
		<!--snapshotRepository>
			<id>ossrh</id>
			<name>snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<name>staging</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository-->
		<snapshotRepository>
			<id>quincy</id>
			<name>snapshots</name>
			<url>https://nexus.maqiang777.com/repository/maven-snapshots</url>
		</snapshotRepository>
		<repository>
			<id>quincy</id>
			<name>releases</name>
			<url>https://nexus.maqiang777.com/repository/maven-releases</url>
		</repository>
	</distributionManagement>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:git://github.com/mq7253180/sdk</connection>
		<developerConnection>scm:git:git://github.com/mq7253180/sdk</developerConnection>
		<url>https://github.com/mq7253180/sdk</url>
	</scm>
	<developers>
		<developer>
			<name>Qiang Ma</name>
			<email>mq7253180@126.com</email>
		</developer>
	</developers>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<compilerVersion>21</compilerVersion>
					<encoding>UTF-8</encoding>
					<compilerArgument>-Xlint:deprecation</compilerArgument>
					<!-- <compilerArguments>
						<extdirs>${pom.basedir}/src/main/lib</extdirs>
					</compilerArguments> -->
					<compilerArgs>
						<compilerArg>
							-parameters
						</compilerArg>
                    </compilerArgs>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.plexus</groupId>
						<artifactId>plexus-compiler-javac</artifactId>
						<version>2.11.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.13</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin-->
			<!-- plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin-->
			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin> -->
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
 		</resources>
	</build>
	<modules>
		<module>sdk</module>
		<module>jdbc-base</module>
		<module>jdbc</module>
		<module>jdbc-sharding</module>
		<module>redis</module>
		<module>redis-session</module>
		<module>zookeeper</module>
		<module>sftp</module>
		<module>auth-common</module>
		<module>auth-server</module>
	</modules>
</project>